--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
   "name": "pitchart/dawin-typo3-cms-distribution",
   "require": {
     "typo3/cms": "^7.6",
-    "helhum/typo3-console":"4.0"
+    "helhum/typo3-console":"4.0",
+    "typo3-ter/introduction": "^2.3",
+    "typo3-ter/extension-builder": "^7.6"
   },
   "extra": {
     "typo3/cms": {
