--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "typo3/cms": "^7.6",
     "helhum/typo3-console":"4.0",
     "typo3-ter/introduction": "^2.3",
-    "typo3-ter/extension-builder": "^7.6"
+    "typo3-ter/extension-builder": "^7.6",
+    "typo3-ter/gridelements": "^7.0"
   },
   "extra": {
     "typo3/cms": {
