--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "helhum/typo3-console":"4.0",
     "typo3-ter/introduction": "^2.3",
     "typo3-ter/extension-builder": "^7.6",
-    "typo3-ter/gridelements": "^7.0"
+    "typo3-ter/gridelements": "^7.0",
+    "typo3-ter/bootstrap_grids": "^1.3"
+
   },
   "extra": {
     "typo3/cms": {
