--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
   "require": {
     "typo3/cms": "^7.6",
     "helhum/typo3-console":"4.0",
+    "helhum/config-loader": "^0.1.0",
     "typo3-ter/introduction": "^2.3",
     "typo3-ter/extension-builder": "^7.6",
     "typo3-ter/gridelements": "^7.0",
     "typo3-ter/bootstrap-grids": "^1.3"
-
   },
   "extra": {
     "typo3/cms": {
