--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "description": "TYPO3 distribution for CMS courses at LP Dawin",
   "require": {
     "typo3/cms": "^7.6",
-    "helhum/typo3-console":"4.0",
+    "helhum/typo3-console":"~4.6",
     "helhum/config-loader": "^0.1.0",
     "typo3-ter/introduction": "^2.3",
     "typo3-ter/extension-builder": "^7.6",
