Adds dependencies for typo3 required core extensions

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,19 @@
   "description": "TYPO3 distribution for CMS courses at LP Dawin",
   "require": {
     "typo3/cms": "^8.7",
+    "typo3/cms-belog": "^8.7",
+    "typo3/cms-beuser": "^8.7",
+    "typo3/cms-context-help": "^8.7",
+    "typo3/cms-fluid-styled-content": "^8.7",
+    "typo3/cms-impexp": "^8.7",
+    "typo3/cms-info": "^8.7",
+    "typo3/cms-info-pagetsconfig": "^8.7",
+    "typo3/cms-lowlevel": "^8.7",
+    "typo3/cms-reports": "^8.7",
+    "typo3/cms-rte-ckeditor": "^8.7",
+    "typo3/cms-setup": "^8.7",
+    "typo3/cms-tstemplate": "^8.7",
+    "typo3/cms-viewpage": "^8.7",
     "helhum/typo3-console":"~4.6",
     "helhum/config-loader": "~0.1.0",
     "friendsoftypo3/extension-builder": "~8.7",
