--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
     "typo3/cms-setup": "^8.7",
     "typo3/cms-tstemplate": "^8.7",
     "typo3/cms-viewpage": "^8.7",
-    "helhum/typo3-console":"~4.6",
-    "helhum/config-loader": "~0.1.0",
+    "helhum/typo3-console":"~5.6",
+    "helhum/config-loader": "~0.11.0",
     "friendsoftypo3/extension-builder": "~8.7",
     "typo3-ter/introduction": "^3.0",
-    "gridelementsteam/gridelements": "dev-master",
+    "typo3-ter/gridelements": "8.3.0",
     "typo3-ter/realurl": "^2.3"
   },
   "extra": {
