--- a/composer.json
+++ b/composer.json
@@ -12,26 +12,25 @@
   "name": "pitchart/dawin-typo3-cms-distribution",
   "description": "TYPO3 distribution for CMS courses at LP Dawin",
   "require": {
-    "typo3/cms": "^8.7",
-    "typo3/cms-belog": "^8.7",
-    "typo3/cms-beuser": "^8.7",
-    "typo3/cms-context-help": "^8.7",
-    "typo3/cms-fluid-styled-content": "^8.7",
-    "typo3/cms-impexp": "^8.7",
-    "typo3/cms-info": "^8.7",
-    "typo3/cms-info-pagetsconfig": "^8.7",
-    "typo3/cms-lowlevel": "^8.7",
-    "typo3/cms-reports": "^8.7",
-    "typo3/cms-rte-ckeditor": "^8.7",
-    "typo3/cms-setup": "^8.7",
-    "typo3/cms-tstemplate": "^8.7",
-    "typo3/cms-viewpage": "^8.7",
-    "helhum/typo3-console":"~5.6",
-    "helhum/config-loader": "~0.11.0",
-    "friendsoftypo3/extension-builder": "~8.7",
-    "typo3-ter/introduction": "^3.0",
-    "typo3-ter/gridelements": "8.3.0",
-    "typo3-ter/realurl": "^2.3"
+    "typo3/cms": "^9.5",
+    "typo3/cms-belog": "^9.5",
+    "typo3/cms-beuser": "^9.5",
+    "typo3/cms-context-help": "^9.5",
+    "typo3/cms-fluid-styled-content": "^9.5",
+    "typo3/cms-impexp": "^9.5",
+    "typo3/cms-info": "^9.5",
+    "typo3/cms-info-pagetsconfig": "^9.5",
+    "typo3/cms-lowlevel": "^9.5",
+    "typo3/cms-reports": "^9.5",
+    "typo3/cms-rte-ckeditor": "^9.5",
+    "typo3/cms-setup": "^9.5",
+    "typo3/cms-tstemplate": "^9.5",
+    "typo3/cms-viewpage": "^9.5",
+    "helhum/typo3-console":"^5.8",
+    "helhum/config-loader": "~0.1.0",
+    "friendsoftypo3/extension-builder": "~9.10",
+    "typo3-ter/introduction": "^4.0",
+    "gridelementsteam/gridelements": "^9.5"
   },
   "extra": {
     "typo3/cms": {
