--- a/composer.json
+++ b/composer.json
@@ -12,25 +12,39 @@
   "name": "pitchart/dawin-typo3-cms-distribution",
   "description": "TYPO3 distribution for CMS courses at LP Dawin",
   "require": {
-    "typo3/cms": "^9.5",
+    "helhum/typo3-console": "^5.5.5",
+    "typo3/minimal": "^9.5",
+    "typo3/cms-about": "^9.5",
+    "typo3/cms-adminpanel": "^9.5",
     "typo3/cms-belog": "^9.5",
     "typo3/cms-beuser": "^9.5",
-    "typo3/cms-context-help": "^9.5",
+    "typo3/cms-felogin": "^9.5",
     "typo3/cms-fluid-styled-content": "^9.5",
+    "typo3/cms-form": "^9.5",
     "typo3/cms-impexp": "^9.5",
     "typo3/cms-info": "^9.5",
-    "typo3/cms-info-pagetsconfig": "^9.5",
-    "typo3/cms-lowlevel": "^9.5",
+    "typo3/cms-redirects": "^9.5",
     "typo3/cms-reports": "^9.5",
     "typo3/cms-rte-ckeditor": "^9.5",
     "typo3/cms-setup": "^9.5",
+    "typo3/cms-seo": "^9.5",
+    "typo3/cms-sys-note": "^9.5",
+    "typo3/cms-t3editor": "^9.5",
     "typo3/cms-tstemplate": "^9.5",
     "typo3/cms-viewpage": "^9.5",
-    "helhum/typo3-console":"^5.8",
     "helhum/config-loader": ">=0.9",
     "friendsoftypo3/extension-builder": "~9.10",
     "typo3-ter/introduction": "^4.0",
     "gridelementsteam/gridelements": "^9.5"
+  },
+  "scripts":{
+    "typo3-cms-scripts": [
+      "typo3cms install:fixfolderstructure",
+      "typo3cms install:generatepackagestates"
+    ],
+    "post-autoload-dump": [
+      "@typo3-cms-scripts"
+    ]
   },
   "extra": {
     "typo3/cms": {
